--- a/static/index.html
+++ b/static/index.html
@@ -11,11 +11,11 @@
     <script type="module">
         // Import our outputted wasm ES6 module
         // Which, export default's, an initialization function
-        import init from "/pkg/rok_page.js";
+        import init from "/script";
 
         const runWasm = async () => {
         // Instantiate our wasm module
-        const helloWorld = await init("/pkg/rok_page_bg.wasm"),
+        const helloWorld = await init("/wasm"),
         addResult = helloWorld.add(24, 24);   // Call the Add function export from wasm, save the result
 
         // Set the result onto the body
