--- a/static/index.html
+++ b/static/index.html
@@ -6,7 +6,7 @@
     <title>Hello World - Rust</title>
   </head>
   <body>
-    <header>Rok</header>
+    <header>AWESOME</header>
     <p id="here"></p>
     <script type="module">
         // Import our outputted wasm ES6 module
